--- a/index.html
+++ b/index.html
@@ -3,7 +3,133 @@
 <head>
 	<title>FCC Pro Landing Page</title>
 </head>
+	<link rel="stylesheet" type="text/css" href="./style/proland.css">
 <body>
+	<div id="page-wrapper">
+		<header id="header">
+			<div class="logo">
+				<img id="header-img" src="./imgs/acme.png">
+			</div>
 
-</body>
+			<nav id="nav-bar">
+				<ul>
+					<li><a href="#features" class="nav-link">Features</a></li>
+					<li><a href="#how-it-works" class="nav-link">How It Works</a></li>
+					<li><a href="#pricing" class="nav-link">Pricing</a></li>
+				</ul>
+			</nav> <!-- End nav-bar -->
+		</header> <!-- End header -->
+	
+		<div class="container">
+			
+		</div>
+
+		<section id="hero">
+			<h2></h2>
+			<form id="form" action="https://www.freecodecamp.com/email-submit">
+				<input type="email" name="email" id="email" placeholder="Enter your email address..." required/>
+				<input type="submit" id="submit" value="Get Started" class="btn"/>
+			</form> <!-- End email form -->
+		</section> <!-- End hero section -->
+
+		<div class="container">
+				<section id="features">
+					<div class="grid">
+						<div class="icon">
+							<i class=""></i>
+						</div> <!-- End icon -->
+						<div class="desc">
+							<h2></h2>
+							<p></p>
+						</div> <!-- End desc -->
+					</div> <!-- End grid -->
+				</section> <!-- End features -->
+			</div> <!-- End container -->
+
+			<div class="container">
+				<section id="features">
+					<div class="grid">
+						<div class="icon">
+							<i class=""></i>
+						</div> <!-- End icon -->
+						<div class="desc">
+							<h2></h2>
+							<p></p>
+						</div> <!-- End desc -->
+					</div> <!-- End grid -->
+				</section> <!-- End features -->
+			</div> <!-- End container -->
+
+			<div class="container">
+				<section id="features">
+					<div class="grid">
+						<div class="icon">
+							<i class=""></i>
+						</div> <!-- End icon -->
+						<div class="desc">
+							<h2></h2>
+							<p></p>
+						</div> <!-- End desc -->
+					</div> <!-- End grid -->
+				</section> <!-- End features -->
+			</div> <!-- End container -->
+	<section id="how-it-works">
+				<iframe id="video" height="315" src="" frameborder="0" allowfullscreen></iframe>
+			</section> <!-- End video -->
+
+			<section id="pricing">
+			    <div id="">
+			      <div class="level">
+			        Tenor Trombone
+			      </div>
+			      <h2>$600</h2>
+			      <ol>
+			        <li>Lorem ipsum.</li>
+			        <li>Lorem ipsum.</li>
+			        <li>Lorem ipsum dolor.</li>
+			        <li>Lorem ipsum.</li>
+			      </ol>
+			      <button class="btn">Select</button>
+			    </div> <!-- End first level -->
+			    <div id="bass">
+			      <div class="level">
+			        Bass Trombone
+			      </div>
+			      <h2>$900</h2>
+			      <ol>
+			        <li>Lorem ipsum.</li>
+			        <li>Lorem ipsum.</li>
+			        <li>Lorem ipsum dolor.</li>
+			        <li>Lorem ipsum.</li>
+			      </ol>
+			      <button class="btn">Select</button>
+			    </div> <!-- End second level -->
+			    <div id="valve">
+			      <div class="level">
+			        Valve Trombone
+			      </div>
+			      <h2>$1200</h2>
+			      <ol>
+			        <li>Plays similar to a Trumpet</li>
+			        <li>Great for Jazz Bands</li>
+			        <li>Lorem ipsum dolor.</li>
+			        <li>Lorem ipsum.</li>
+			      </ol>
+			      <button class="btn">Select</button>
+			    </div> <!-- End third level -->
+			</section> <!-- End pricing -->
+			  <footer>
+			    <ul>
+			      <li><a href="#">Privacy</a></li>
+			      <li><a href="#">Terms</a></li>
+			      <li><a href="#">Contact</a></li>
+			    </ul>
+			    <span>Copyright 2018, Ridgeback WebDev</span>
+			  </footer> <!-- End footer -->
+			</div>
+
+
+			<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+		</div> <!-- End page-wrapper -->
+	</body>
 </html>
