--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 	<div id="page-wrapper">
 		<header id="header">
 			<div class="logo">
-				<img id="header-img" src="./imgs/acme.png">
+				<img id="header-img" src="https://lilleonz.github.io/Microverse_Alvin_leon/imgs/acme.png">
 			</div>
 
 			<nav id="nav-bar">
-				<ul>
-					<li><a href="#features" class="nav-link">Features</a></li>
-					<li><a href="#how-it-works" class="nav-link">How It Works</a></li>
-					<li><a href="#pricing" class="nav-link">Pricing</a></li>
-				</ul>
+				<a href="#features" class="nav-link">Features</a>
+				<a href="#how-it-works" class="nav-link">How It Works</a>
+				<a href="#pricing" class="nav-link">Pricing</a>
 			</nav> <!-- End nav-bar -->
-		</header> <!-- End header -->
+	  	</header> <!-- End header -->
 	
 		<div class="container">
 			
@@ -33,18 +31,32 @@
 		</section> <!-- End hero section -->
 
 		<div class="container">
-				<section id="features">
-					<div class="grid">
-						<div class="icon">
-							<i class=""></i>
-						</div> <!-- End icon -->
-						<div class="desc">
-							<h2></h2>
-							<p></p>
-						</div> <!-- End desc -->
-					</div> <!-- End grid -->
-				</section> <!-- End features -->
-			</div> <!-- End container -->
+			<section id="features">
+				<div class="grid">
+					<div class="icon">
+						<i class=""></i>
+					</div> <!-- End icon -->
+					<div class="desc">
+						<h2></h2>
+						<p></p>
+					</div> <!-- End desc -->
+				</div> <!-- End grid -->
+			</section> <!-- End features -->
+		</div> <!-- End container -->
+
+		<div class="container">
+			<section id="features">
+				<div class="grid">
+					<div class="icon">
+						<i class=""></i>
+					</div> <!-- End icon -->
+					<div class="desc">
+						<h2></h2>
+						<p></p>
+					</div> <!-- End desc -->
+				</div> <!-- End grid -->
+			</section> <!-- End features -->
+		</div> <!-- End container -->
 
 			<div class="container">
 				<section id="features">
@@ -59,21 +71,7 @@
 					</div> <!-- End grid -->
 				</section> <!-- End features -->
 			</div> <!-- End container -->
-
-			<div class="container">
-				<section id="features">
-					<div class="grid">
-						<div class="icon">
-							<i class=""></i>
-						</div> <!-- End icon -->
-						<div class="desc">
-							<h2></h2>
-							<p></p>
-						</div> <!-- End desc -->
-					</div> <!-- End grid -->
-				</section> <!-- End features -->
-			</div> <!-- End container -->
-	<section id="how-it-works">
+			<section id="how-it-works">
 				<iframe id="video" height="315" src="" frameborder="0" allowfullscreen></iframe>
 			</section> <!-- End video -->
 
@@ -126,10 +124,9 @@
 			    </ul>
 			    <span>Copyright 2018, Ridgeback WebDev</span>
 			  </footer> <!-- End footer -->
-			</div>
-
+	</div> <!-- End page-wrapper -->
 
 			<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-		</div> <!-- End page-wrapper -->
-	</body>
+	
+</body>
 </html>
