index html updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>FCC Pro Landing Page</title>
 </head>
-	<link rel="stylesheet" type="text/css" href="./style/proland.css">
+	<link rel="stylesheet" type="text/css" href="https://lilleonz.github.io/Microverse_Alvin_leon/style/proland.css">
 <body>
 	<div id="page-wrapper">
 		<header id="header">
