--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
 	<link rel="stylesheet" type="text/css" href="https://lilleonz.github.io/Microverse_Alvin_leon/style/proland.css">
 <body>
 	<div id="page-wrapper">
-		<header id="header">
-			<div class="logo">
-				<img id="header-img" src="https://lilleonz.github.io/Microverse_Alvin_leon/imgs/acme.png">
-			</div>
-
+		<div id="header" class="nav-fixed">
 			<nav id="nav-bar">
+				<img id="header-img" src="https://lilleonz.github.io/Microverse_Alvin_leon/imgs/acme.png">
+
 				<a href="#features" class="nav-link">Features</a>
 				<a href="#how-it-works" class="nav-link">How It Works</a>
 				<a href="#pricing" class="nav-link">Pricing</a>
 			</nav> <!-- End nav-bar -->
-	  	</header> <!-- End header -->
-	
+	  	</div> <!-- End nav-fixed -->
+
 		<div class="container">
 			
 		</div>
@@ -124,9 +122,8 @@
 			    </ul>
 			    <span>Copyright 2018, Ridgeback WebDev</span>
 			  </footer> <!-- End footer -->
-	</div> <!-- End page-wrapper -->
 
 			<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-	
+	</div>
 </body>
 </html>
