misc css updates

--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
 			<nav id="nav-bar">
 				<img id="header-img" src="https://lilleonz.github.io/Microverse_Alvin_leon/imgs/acme.png">
 
-				<a href="#features" class="nav-link">Features</a>
-				<a href="#how-it-works" class="nav-link">How It Works</a>
-				<a href="#pricing" class="nav-link">Pricing</a>
+				<a class="nav-link" href="#features">Features</a> 
+				<a class="nav-link" href="#how-it-works">How it works</a> 
+				<a class="nav-link" href="#pricing">Pricing</a> 
 			</nav> <!-- End nav-bar -->
 	  	</div> <!-- End nav-fixed -->
 
-		<div class="container">
-			
-		</div>
 
 		<section id="hero">
 			<h2></h2>
