added youtube video

--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
 	<link rel="stylesheet" type="text/css" href="https://lilleonz.github.io/Microverse_Alvin_leon/style/proland.css">
 <body>
 	<div id="page-wrapper">
-		<div id="header" class="nav-fixed">
+		<header id="header" class="nav-fixed">
+			<div class="logo">
+				<img id="header-img" src="https://lilleonz.github.io/Microverse_Alvin_leon/imgs/acme.png" />
+			</div>
+			
 			<nav id="nav-bar">
-				<img id="header-img" src="https://lilleonz.github.io/Microverse_Alvin_leon/imgs/acme.png">
-
 				<a class="nav-link" href="#features">Features</a> 
 				<a class="nav-link" href="#how-it-works">How it works</a> 
-				<a class="nav-link" href="#pricing">Pricing</a> 
-			</nav> <!-- End nav-bar -->
-	  	</div> <!-- End nav-fixed -->
+				<a class="nav-link" href="#pricing">Pricing</a>
+			</nav>	
+	  	</header> <!-- End header -->
+	</div> <!-- End nav-bar -->
 
+	<div class="continer">
+				
+	</div>
 
 		<section id="hero">
-			<h2></h2>
+			<h2>Get on our list....</h2>
 			<form id="form" action="https://www.freecodecamp.com/email-submit">
 				<input type="email" name="email" id="email" placeholder="Enter your email address..." required/>
 				<input type="submit" id="submit" value="Get Started" class="btn"/>
@@ -36,11 +42,17 @@
 						<p></p>
 					</div> <!-- End desc -->
 				</div> <!-- End grid -->
-			</section> <!-- End features -->
-		</div> <!-- End container -->
 
-		<div class="container">
-			<section id="features">
+				<div class="grid">
+					<div class="icon">
+						<i class=""></i>
+					</div> <!-- End icon -->
+					<div class="desc">
+						<h2></h2>
+						<p></p>
+					</div> <!-- End desc -->
+				</div> <!-- End grid -->
+
 				<div class="grid">
 					<div class="icon">
 						<i class=""></i>
@@ -51,24 +63,10 @@
 					</div> <!-- End desc -->
 				</div> <!-- End grid -->
 			</section> <!-- End features -->
-		</div> <!-- End container -->
 
-			<div class="container">
-				<section id="features">
-					<div class="grid">
-						<div class="icon">
-							<i class=""></i>
-						</div> <!-- End icon -->
-						<div class="desc">
-							<h2></h2>
-							<p></p>
-						</div> <!-- End desc -->
-					</div> <!-- End grid -->
-				</section> <!-- End features -->
-			</div> <!-- End container -->
 			<section id="how-it-works">
-				<iframe id="video" height="315" src="" frameborder="0" allowfullscreen></iframe>
-			</section> <!-- End video -->
+				<iframe id="video" height="315" src="https://www.youtube.com/embed/1EevEHh58B0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</section> <!-- End how-it-works -->
 
 			<section id="pricing">
 			    <div id="">
@@ -111,16 +109,17 @@
 			      <button class="btn">Select</button>
 			    </div> <!-- End third level -->
 			</section> <!-- End pricing -->
-			  <footer>
-			    <ul>
-			      <li><a href="#">Privacy</a></li>
-			      <li><a href="#">Terms</a></li>
-			      <li><a href="#">Contact</a></li>
-			    </ul>
-			    <span>Copyright 2018, Ridgeback WebDev</span>
-			  </footer> <!-- End footer -->
 
-			<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+	  <footer>
+	    <ul>
+	      <li><a href="#">Privacy</a></li>
+	      <li><a href="#">Terms</a></li>
+	      <li><a href="#">Contact</a></li>
+	    </ul>
+	    <span>Copyright 2018, Ridgeback WebDev</span>
+	  </footer> <!-- End footer -->
+
+	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 	</div>
 </body>
 </html>
