--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 	<title>FCC Pro Landing Page</title>
 </head>
 	<link rel="stylesheet" type="text/css" href="https://lilleonz.github.io/Microverse_Alvin_leon/style/proland.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <body>
 	<div id="page-wrapper">
 		<header id="header" class="nav-fixed">
-			<div class="logo">
+			<nav id="nav-bar" class="">
 				<img id="header-img" src="https://lilleonz.github.io/Microverse_Alvin_leon/imgs/acme.png" />
-			</div>
 			
-			<nav id="nav-bar">
-				<a class="nav-link" href="#features">Features</a> 
-				<a class="nav-link" href="#how-it-works">How it works</a> 
-				<a class="nav-link" href="#pricing">Pricing</a>
-			</nav>	
+			
+				<a class="d-none d-md-inline-block" href="#features">Features</a> 
+				<a class="py-2 d-none d-md-inline-block" href="#how-it-works">How it works</a> 
+				<a class="py-2 d-none d-md-inline-block" href="#pricing">Pricing</a>
+			</nav>
 	  	</header> <!-- End header -->
 	</div> <!-- End nav-bar -->
 
-	<div class="continer">
+	<div class="container">
 				
 	</div>
 
@@ -31,95 +31,94 @@
 			</form> <!-- End email form -->
 		</section> <!-- End hero section -->
 
-		<div class="container">
-			<section id="features">
-				<div class="grid">
-					<div class="icon">
-						<i class=""></i>
-					</div> <!-- End icon -->
-					<div class="desc">
-						<h2></h2>
-						<p></p>
-					</div> <!-- End desc -->
-				</div> <!-- End grid -->
+		<section id="features">
+			<div class="grid">
+				<div class="icon">
+					<i class=""></i>
+				</div> <!-- End icon -->
+				<div class="desc">
+					<h2></h2>
+					<p></p>
+				</div> <!-- End desc -->
+			</div> <!-- End grid -->
 
-				<div class="grid">
-					<div class="icon">
-						<i class=""></i>
-					</div> <!-- End icon -->
-					<div class="desc">
-						<h2></h2>
-						<p></p>
-					</div> <!-- End desc -->
-				</div> <!-- End grid -->
+			<div class="grid">
+				<div class="icon">
+					<i class=""></i>
+				</div> <!-- End icon -->
+				<div class="desc">
+					<h2></h2>
+					<p></p>
+				</div> <!-- End desc -->
+			</div> <!-- End grid -->
 
-				<div class="grid">
-					<div class="icon">
-						<i class=""></i>
-					</div> <!-- End icon -->
-					<div class="desc">
-						<h2></h2>
-						<p></p>
-					</div> <!-- End desc -->
-				</div> <!-- End grid -->
-			</section> <!-- End features -->
+			<div class="grid">
+				<div class="icon">
+					<i class=""></i>
+				</div> <!-- End icon -->
+				<div class="desc">
+					<h2></h2>
+					<p></p>
+				</div> <!-- End desc -->
+			</div> <!-- End grid -->
+		</section> <!-- End features -->
 
-			<section id="how-it-works">
-				<iframe id="video" height="315" src="https://www.youtube.com/embed/1EevEHh58B0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</section> <!-- End how-it-works -->
+		<section id="how-it-works">
+			<iframe id="video" height="315" src="https://www.youtube.com/embed/1EevEHh58B0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</section> <!-- End how-it-works -->
 
-			<section id="pricing">
-			    <div id="">
-			      <div class="level">
-			        Tenor Trombone
-			      </div>
-			      <h2>$600</h2>
-			      <ol>
-			        <li>Lorem ipsum.</li>
-			        <li>Lorem ipsum.</li>
-			        <li>Lorem ipsum dolor.</li>
-			        <li>Lorem ipsum.</li>
-			      </ol>
-			      <button class="btn">Select</button>
-			    </div> <!-- End first level -->
-			    <div id="bass">
-			      <div class="level">
-			        Bass Trombone
-			      </div>
-			      <h2>$900</h2>
-			      <ol>
-			        <li>Lorem ipsum.</li>
-			        <li>Lorem ipsum.</li>
-			        <li>Lorem ipsum dolor.</li>
-			        <li>Lorem ipsum.</li>
-			      </ol>
-			      <button class="btn">Select</button>
-			    </div> <!-- End second level -->
-			    <div id="valve">
-			      <div class="level">
-			        Valve Trombone
-			      </div>
-			      <h2>$1200</h2>
-			      <ol>
-			        <li>Plays similar to a Trumpet</li>
-			        <li>Great for Jazz Bands</li>
-			        <li>Lorem ipsum dolor.</li>
-			        <li>Lorem ipsum.</li>
-			      </ol>
-			      <button class="btn">Select</button>
-			    </div> <!-- End third level -->
-			</section> <!-- End pricing -->
+		<section id="pricing">
+		    <div id="">
+		      <div class="level">
+		        Tenor Trombone
+		      </div>
+		      <h2>$600</h2>
+		      <ol>
+		        <li>Lorem ipsum.</li>
+		        <li>Lorem ipsum.</li>
+		        <li>Lorem ipsum dolor.</li>
+		        <li>Lorem ipsum.</li>
+		      </ol>
+		      <button class="btn">Select</button>
+		    </div> <!-- End first level -->
+		    <div id="bass">
+		      <div class="level">
+		        Bass Trombone
+		      </div>
+		      <h2>$900</h2>
+		      <ol>
+		        <li>Lorem ipsum.</li>
+		        <li>Lorem ipsum.</li>
+		        <li>Lorem ipsum dolor.</li>
+		        <li>Lorem ipsum.</li>
+		      </ol>
+		      <button class="btn">Select</button>
+		    </div> <!-- End second level -->
+		    <div id="valve">
+		      <div class="level">
+		        Valve Trombone
+		      </div>
+		      <h2>$1200</h2>
+		      <ol>
+		        <li>Plays similar to a Trumpet</li>
+		        <li>Great for Jazz Bands</li>
+		        <li>Lorem ipsum dolor.</li>
+		        <li>Lorem ipsum.</li>
+		      </ol>
+		      <button class="btn">Select</button>
+		    </div> <!-- End third level -->
+		</section> <!-- End pricing -->
 
-	  <footer>
-	    <ul>
-	      <li><a href="#">Privacy</a></li>
-	      <li><a href="#">Terms</a></li>
-	      <li><a href="#">Contact</a></li>
-	    </ul>
-	    <span>Copyright 2018, Ridgeback WebDev</span>
-	  </footer> <!-- End footer -->
+  <footer>
+    <ul>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <span>Copyright 2018, Ridgeback WebDev</span>
+  </footer> <!-- End footer -->
 
 	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-	</div>
+
 </body>
 </html>
